# macrodynamics

./: .coveragerc  .gitignore  .travis.yml  Makefile  README.md  README.rst  conf.py  pyproject.toml  requirements.in  requirements.txt  setup.py  test-requirements.txt
.github/workflows/: build.yml  master.yml
docs/: conf.py  graph_dynamics.dynamics.rst  graph_dynamics.rst  index.rst  macrodynamics.dynamics.rst  macrodynamics.rst  modules.rst
graph_dynamics/: __init__.py  _util.c  structure.py  util.py
graph_dynamics/dynamics/: averaging.py  continuous.py  diffusion.py  discrete.py  operator.py  oscillation.py
macrodynamics/: __init__.py  _util.c  _util.pyx  structure.py  util.py
macrodynamics/dynamics/: __init__.py  averaging.py  continuous.py  diffusion.py  discrete.py  operator.py  oscillation.py
src/macrodynamics/: structure.py  util.py
src/macrodynamics/dynamics/: averaging.py  continuous.py  diffusion.py  discrete.py  operator.py  oscillation.py
tests/: conftest.py  test_numerics.py  test_structure.py  test_util.py
tests/dynamics/: _test_common.py  test_continuous.py  test_discrete.py
